Changelog
=========

1.7.11 - Unreleased
-------------------

- Fixes +add arrow when wizard is closed [10936].
  [Cesar Gonzalez]

- Fixes url of dynatree json data on wizard [10963].
  [Cesar Gonzalez]

- Add white-cross and fav-icon images to theme and update css [10936].
  [Cesar Gonzalez]

- Cleans dependencies [10861].
  [Jose Dinuncio]

- Align +Add wizard arrow [10838].
  [Cesar Gonzalez]

- Customize plone e-mail's templates [10687].
  [Marcin Staniszczak]

- Finishes removing OpenERP portlet [10362].
  [Jose Dinuncio]

- Ignores enter key on livesearch [10688].
  [Cesar Gonzalez]

- Fixes style on +add button and search for dynamic content (translations) [10519].
  [Cesar Gonzalez]

- Add german translations [10519].
  [Marcin Staniszczak]

- Adds button text to Browse Files button and set css [10695].
  [Cesar Gonzalez]

- Adds layer specificity to json messages views.
  [Jose Dinuncio]

- Adds image width limit to 100% on content [10561].
  [Cesar Gonzalez]

1.7.10 - March 07, 2014
-----------------------

- Fixes overlays dialog position, update css selectors [10438].
  [Cesar Gonzalez]

- Fixes bug in redirection after deleting file [10439].
  [Jose Dinuncio]

- Hides the "Edit without visual editor" link [10166].
  [Cesar Gonzalez]

- Adds anonymous page configuration thru the web [10383].
  [Jose Dinuncio]

- Begins removing OpenERP portlet [10362]
  [Jose Dinuncio]

- Adds the appendTo option of autocomplete to insert the result ul element
  relative to the input field. [10171]
  [Cesar Gonzalez]

- Adds ccs style to destination object autocomplete of the wizard.
  Remove unused ul element from template. [10171]
  [Cesar Gonzalez]

- Adds styled spinner to livesearch box (dashboard mode) [10169].
  [Cesar Gonzalez]

- Adds styled spinner to livesearch box (dashboard mode) [10169].
  [Cesar Gonzalez]

- Improves speed in user search [10169].
  [Jose Dinuncio].

- Adds CMF Subscription list style. [9861].
  [Cesar Gonzalez]

- Adds version.txt