@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+    <column value="avg_ratings" remove="True"/>
+    <column value="total_down_ratings" remove="True"/>
+</object>
